add order api create

--- a/OnlineStoreDjango/my_apps/accounts/templates/oauth/ok.html
+++ b/OnlineStoreDjango/my_apps/accounts/templates/oauth/ok.html
@@ -5,7 +5,11 @@
     <title>ok</title>
 </head>
 <body>
-Your email is:
-{{detail}}
+Your email is: {{ email }} <br>
+first_name: {{ first_name }}<br>
+last_name: {{ last_name }}<br>
+token: {{ token }}<br>
+created: {{ created }}<br>
+url_request: {{ url_request }}
 </body>
 </html>
