fix add reset password

--- a/OnlineStoreDjango/my_apps/accounts/templates/accounts/password_reset_done.html
+++ b/OnlineStoreDjango/my_apps/accounts/templates/accounts/password_reset_done.html
@@ -9,6 +9,7 @@
 	<form method="post" class="card">
 		{% csrf_token %}
 	    <h2 class="text-center">Reset Password</h2>
+    check your email
 		{% for field in form %}
 	    		{{ field.label_tag }}
 	        	{{ field }}
